salesforce_sfdx_QA/main/default/objects/Account/fields/Last_Name_Of_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_Of_Primary_Contact__c</fullName>
    <label>Last Name Of Primary Contact</label>
    <length>24</length>
    <type>Text</type>
</CustomField>