salesforce_sfdx_QA/main/default/objects/Account/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <label>License Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>