salesforce_sfdx_QA/main/default/objects/Account/fields/Licenses_Certs_2_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Licenses_Certs_2_Expiration_Date__c</fullName>
    <label>Licenses &amp; Certs (2) - Expiration Date</label>
    <type>Date</type>
</CustomField>