salesforce_sfdx_QA/main/default/objects/Account/fields/Licenses_Certs_2_Issuing_Authority__c.field-meta.xml
<CustomField>
    <fullName>Licenses_Certs_2_Issuing_Authority__c</fullName>
    <label>Licenses &amp; Certs (2) - Issuing Authority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>