salesforce_sfdx_QA/main/default/objects/Account/fields/Licenses_Certs_3_Type__c.field-meta.xml
<CustomField>
    <fullName>Licenses_Certs_3_Type__c</fullName>
    <label>Licenses &amp; Certs (3) - Type</label>
    <length>24</length>
    <type>Text</type>
</CustomField>