salesforce_sfdx_QA/main/default/objects/Account/fields/Licenses_Certs_4_Number__c.field-meta.xml
<CustomField>
    <fullName>Licenses_Certs_4_Number__c</fullName>
    <label>Licenses &amp; Certs (4) - Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>