salesforce_sfdx_QA/main/default/objects/Account/fields/Mailing_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Mailing_State_Province__c</fullName>
    <label>* Mailing State/Province</label>
    <length>24</length>
    <type>Text</type>
</CustomField>