salesforce_sfdx_QA/main/default/objects/Account/fields/Mailing_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Zip_Postal_Code__c</fullName>
    <label>* Mailing Zip/Postal Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>