salesforce_sfdx_QA/main/default/objects/Account/fields/mm_dd_yyyy__c.field-meta.xml
<CustomField>
    <fullName>mm_dd_yyyy__c</fullName>
    <label>* mm/dd/yyyy</label>
    <type>Date</type>
</CustomField>