salesforce_sfdx_QA/main/default/objects/Account/fields/Newton_Account__c.field-meta.xml
<CustomField>
    <fullName>Newton_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this a Newton Account?</inlineHelpText>
    <label>Newton Account</label>
    <type>Checkbox</type>
</CustomField>