salesforce_sfdx_QA/main/default/objects/Account/fields/Other_please_specify_BusinessType__c.field-meta.xml
<CustomField>
    <fullName>Other_please_specify_BusinessType__c</fullName>
    <label>Other, please specify</label>
    <type>TextArea</type>
</CustomField>