salesforce_sfdx_QA/main/default/objects/Account/fields/OtherPleaseSpecify_HearAboutTheProg__c.field-meta.xml
<CustomField>
    <fullName>OtherPleaseSpecify_HearAboutTheProg__c</fullName>
    <label>Other, please specify</label>
    <type>TextArea</type>
</CustomField>