salesforce_sfdx_QA/main/default/objects/Account/fields/OtherPleaseSpecifyHearAboutTheProg__c.field-meta.xml
<CustomField>
    <fullName>OtherPleaseSpecifyHearAboutTheProg__c</fullName>
    <label>Other, please specify</label>
    <length>255</length>
    <type>Text</type>
</CustomField>