salesforce_sfdx_QA/main/default/objects/Account/fields/PC_Agreement_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>PC_Agreement_Last_Name__c</fullName>
    <label>PC Agreement - Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>