salesforce_sfdx_QA/main/default/objects/Account/fields/PC_Agreement_Version__c.field-meta.xml
<CustomField>
    <fullName>PC_Agreement_Version__c</fullName>
    <label>PC Agreement Version</label>
    <type>Date</type>
</CustomField>