salesforce_sfdx_QA/main/default/objects/Account/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>* Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Primary Contact</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>