salesforce_sfdx_QA/main/default/objects/Account/fields/Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Email__c</fullName>
    <label>Primary Contact Email</label>
    <type>Email</type>
</CustomField>