salesforce_sfdx_QA/main/default/objects/Account/fields/Projects_Primary_Contact_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Projects_Primary_Contact_Email_Address__c</fullName>
    <label>* Projects Primary Contact Email Address</label>
    <type>Email</type>
</CustomField>