salesforce_sfdx_QA/main/default/objects/Account/fields/Projects_Primary_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Projects_Primary_Contact_Name__c</fullName>
    <label>* Projects Primary Contact Name</label>
    <length>24</length>
    <type>Text</type>
</CustomField>