salesforce_sfdx_QA/main/default/objects/Account/fields/PSC_Gas_Service_Class__c.field-meta.xml
<CustomField>
    <fullName>PSC_Gas_Service_Class__c</fullName>
    <inlineHelpText>Gas Public Commission Service Class</inlineHelpText>
    <label>PSC Gas Service Class</label>
    <length>20</length>
    <type>Text</type>
</CustomField>