salesforce_sfdx_QA/main/default/objects/Account/fields/Rate_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Rate_Schedule__c</fullName>
    <label>Rate Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Determined by Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>