salesforce_sfdx_QA/main/default/objects/Account/fields/Reactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>Reactivation_Date__c</fullName>
    <label>Reactivation Date</label>
    <type>Date</type>
</CustomField>