salesforce_sfdx_QA/main/default/objects/Account/fields/Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Reference_Id__c</fullName>
    <displayFormat>ACT-{000000}</displayFormat>
    <label>* Reference Id</label>
    <type>AutoNumber</type>
</CustomField>