salesforce_sfdx_QA/main/default/objects/Account/fields/Specialty_Type__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Type__c</fullName>
    <label>Specialty Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air Compressor</fullName>
            </value>
            <value>
                <fullName>Air Flow Management</fullName>
            </value>
            <value>
                <fullName>Air Sealing</fullName>
            </value>
            <value>
                <fullName>Boiler Cleaning &amp; Tune Up</fullName>
            </value>
            <value>
                <fullName>Boiler Controls</fullName>
            </value>
            <value>
                <fullName>Boilers</fullName>
            </value>
            <value>
                <fullName>Boilers &amp; Domestic Hot Water</fullName>
            </value>
            <value>
                <fullName>Building Design</fullName>
            </value>
            <value>
                <fullName>Chiller Controls &amp; EMS</fullName>
            </value>
            <value>
                <fullName>Chillers</fullName>
            </value>
            <value>
                <fullName>Compressed Air Refrigeration</fullName>
            </value>
            <value>
                <fullName>Compressed Air Systems</fullName>
            </value>
            <value>
                <fullName>Distributed Generation Renewables</fullName>
            </value>
            <value>
                <fullName>Elevators</fullName>
            </value>
            <value>
                <fullName>Energy Analysis &amp; Benchmarking</fullName>
            </value>
            <value>
                <fullName>Energy Audit &amp; Commissioning</fullName>
            </value>
            <value>
                <fullName>Energy Management Systems</fullName>
            </value>
            <value>
                <fullName>Furnaces</fullName>
            </value>
            <value>
                <fullName>Heating Tune-Ups</fullName>
            </value>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>HVAC Refrigeration</fullName>
            </value>
            <value>
                <fullName>Insulations</fullName>
            </value>
            <value>
                <fullName>IT Optimization</fullName>
            </value>
            <value>
                <fullName>Lighting &amp; Controls</fullName>
            </value>
            <value>
                <fullName>Master Venting - Risers, TRV’s Orifice Plates</fullName>
            </value>
            <value>
                <fullName>Motors</fullName>
            </value>
            <value>
                <fullName>Power Management Strategies</fullName>
            </value>
            <value>
                <fullName>Process Upgrades</fullName>
            </value>
            <value>
                <fullName>Refrigeration</fullName>
            </value>
            <value>
                <fullName>VFDS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>