salesforce_sfdx_QA/main/default/objects/Account/fields/Tax_Classification_if_exempt__c.field-meta.xml
<CustomField>
    <fullName>Tax_Classification_if_exempt__c</fullName>
    <label>Tax Classification (if exempt)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D=Entity</fullName>
            </value>
            <value>
                <fullName>C=Corporation</fullName>
            </value>
            <value>
                <fullName>P=Partnership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>