salesforce_sfdx_QA/main/default/objects/Account/fields/Tax_Entity__c.field-meta.xml
<CustomField>
    <fullName>Tax_Entity__c</fullName>
    <label>Tax Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual/Sole Proprietor</fullName>
            </value>
            <value>
                <fullName>Limited Liabiilty Company</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Exempt Payee (W-9)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>