salesforce_sfdx_QA/main/default/objects/Account/fields/test_omni_url__c.field-meta.xml
<CustomField>
    <fullName>test_omni_url__c</fullName>
    <label>test omni url</label>
    <type>Url</type>
</CustomField>