salesforce_sfdx_QA/main/default/objects/Account/fields/Title_of_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Title_of_Primary_Contact__c</fullName>
    <label>* Title of Primary Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>