salesforce_sfdx_QA/main/default/objects/Account/fields/unique_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>unique_Account_Number__c</fullName>
    <externalId>true</externalId>
    <label>Unique Account Number</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>