salesforce_sfdx_QA/main/default/objects/Account/fields/WC_Disease__c.field-meta.xml
<CustomField>
    <fullName>WC_Disease__c</fullName>
    <label>WC Disease Policy Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>