salesforce_sfdx_QA/main/default/objects/Account/fields/WC_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>WC_Exp_Date__c</fullName>
    <description>Expiration date of workers comp</description>
    <label>WC Exp Date</label>
    <type>Date</type>
</CustomField>