salesforce_sfdx_QA/main/default/objects/Account/fields/WC_Liability_Name__c.field-meta.xml
<CustomField>
    <fullName>WC_Liability_Name__c</fullName>
    <description>Name of workers comp/liability</description>
    <label>WC Liability Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>