salesforce_sfdx_QA/main/default/objects/Account/fields/WS_Account__c.field-meta.xml
<CustomField>
    <fullName>WS_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this a Water Street Account?</inlineHelpText>
    <label>WS Account</label>
    <type>Checkbox</type>
</CustomField>