salesforce_sfdx_QA/main/default/objects/Account/fields/Years_in_Business__c.field-meta.xml
<CustomField>
    <fullName>Years_in_Business__c</fullName>
    <label>Years in Business</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>