salesforce_sfdx_QA/main/default/objects/Account/listViews/Submitted_Applications.listView-meta.xml
<ListView>
    <fullName>Submitted_Applications</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Trade_Ally_Status__c</field>
        <operation>equals</operation>
        <value>Application Received</value>
    </filters>
    <label>Submitted Applications</label>
</ListView>